# colorcet

./: Cargo.toml  README.md  copy_from_colorcet.py
src/: colormaps.rs  lib.rs
