[package]
name = "colorcet"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Wim Pomp <w.pomp@nki.nl>"]
license = "CC-BY-4.0 AND PSF-2.0 AND MIT"
description = "Colorcet colormaps."
homepage = "https://github.com/wimpomp/colorcet"
repository = "https://github.com/wimpomp/colorcet"
readme = "README.md"
keywords = ["color", "colormap", "color-scales", "visualization", "gradient"]
categories = ["graphics", "visualization"]

[dependencies]
colorgrad = "0.7.2"
num-traits = "0.2.19"
phf = { version = "0.13.1", features = ["macros"] }
thiserror = "2.0.16"